--- a/VecinosUY.Web.Api/Pages/userForm.html
+++ b/VecinosUY.Web.Api/Pages/userForm.html
@@ -2,9 +2,9 @@
     <br />
     <br />
     <div class="form-group">
-        <label for="userName" class="col-sm-2 control-label">Nombre</label>
+        <label for="userName" class="col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
-            <input type="text" ng-model="userName" class="form-control" id="nameUser" placeholder="Nombre de usuario" />            
+            <input type="text" ng-model="userName" class="form-control" id="nameUser" placeholder="Email de usuario" />            
         </div>
     </div>    
     <div class="form-group">
