api con rf1, 2 3 y 4

--- a/VecinosUY.Web.Api/Pages/allUsers.html
+++ b/VecinosUY.Web.Api/Pages/allUsers.html
@@ -15,6 +15,7 @@
         <td>
             <a class="btn btn-primary" href="#viewUser/{{user.UserId}}">Modificar</a>
             <a class="btn btn-danger" ng-click="deleteUser(user)">Borrar</a>
+            <a class="btn btn-warning" ng-click="deleteToken(user)">Desloguear</a>
         </td>
     </tr>
 </table>
