--- a/VecinosUY.Web.Api/index.html
+++ b/VecinosUY.Web.Api/index.html
@@ -41,7 +41,7 @@
 
             <div class="container">
                 <label><b>Usuario</b></label>
-                <input id="id" type="text" placeholder="Ingrese Número de usuario VecinosUY" name="uname" required>
+                <input id="id" type="text" placeholder="Ingrese usuario de VecinosUY" name="uname" required>
                 <br/>
                 <label><b>Password</b></label>
                 <input id="pass" type="password" placeholder="Ingrese contraseña" name="psw" required>
