--- a/VecinosUY.Web.Api/Pages/user-add.html
+++ b/VecinosUY.Web.Api/Pages/user-add.html
@@ -1,3 +1,4 @@
-﻿<form class="form-horizontal" role="form" ng-submit="addUser()">
+﻿<form class="form-horizontal" role="form" ng-submit="
+      ()">
     <div ng-include="'Pages/userForm.html'"></div>
 </form>
