--- a/VecinosUY.Web.Api/Pages/userForm.html
+++ b/VecinosUY.Web.Api/Pages/userForm.html
@@ -2,11 +2,19 @@
     <br />
     <br />
     <div class="form-group">
-        <label for="userName" class="col-sm-2 control-label">Email</label>
+        <label for="userId" class="col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
-            <input type="text" ng-model="userName" class="form-control" id="nameUser" placeholder="Email de usuario" />            
+            <input type="text" ng-model="userId" class="form-control" id="nameUser" placeholder="Email de usuario" />            
         </div>
     </div>    
+
+    <div class="form-group">
+        <label for="userName" class="col-sm-2 control-label">Nombre</label>
+        <div class="col-sm-10">
+            <input type="text" ng-model="userName" class="form-control" id="userEditableName" placeholder="Nombre" />
+        </div>
+    </div>    
+
     <div class="form-group">
         <label for="contrasena" class="col-sm-2 control-label">Contraseña</label>
         <div class="col-sm-10">
