favoritos, push notification, sql lite del lado de web api

--- a/VecinosUY.Web.Api/index.html
+++ b/VecinosUY.Web.Api/index.html
@@ -24,6 +24,7 @@
             <ul class="nav">
                 <li><a  href="#home" >Inicio</a></li>
                 <li><a href="#allUsers" onclick="viewDiv('divUsuarios')">Usuarios</a></li>
+                <li><a href="#allAnnouncements" onclick="viewDiv('divAnuncios')">Anuncios</a></li>
 
                 <li><a><span><img class="imgLogin" src="./imgs/login.png"><label id="usuarioLog" class="labelUsu"></label></span></a>
                     <ul>
