--- a/VecinosUY.Web.Api/index.html
+++ b/VecinosUY.Web.Api/index.html
@@ -38,7 +38,7 @@
     <div id="divLogin" class="GeneralContainer" ng-controller="UserLogin" align="center">
         <form id="frmLogin" ng-submit="login()">
             <div class="imgcontainer">
-                <img src="./imgs/img_Login.png" alt="Avatar" class="avatar">
+                <img src="./imgs/Logo_VecinosUY.png" alt="Logo" class="logo">
             </div>
 
             <div class="container">
