--- a/VecinosUY.Web.Api/index.html
+++ b/VecinosUY.Web.Api/index.html
@@ -45,10 +45,10 @@
                 <label><b>Usuario</b></label>
                 <input id="id" type="text" placeholder="Ingrese usuario de VecinosUY" name="uname" required>
                 <br/>
-                <label><b>Password</b></label>
+                <label><b>Contrase&ntilde;a</b></label>
                 <input id="pass" type="password" placeholder="Ingrese contraseña" name="psw" required>
                 <br />
-                <input id="login" type="submit" value="login">                
+                <input id="login" type="submit" value="Iniciar Sesión">                
                 <p class="errorLogin">{{greeting.Message}}</p>
             </div>
         </form>
