--- a/VecinosUY.Web.Api/Pages/userForm.html
+++ b/VecinosUY.Web.Api/Pages/userForm.html
@@ -21,6 +21,14 @@
             <input type="password" ng-model="contrasena" class="form-control" id="passUser" placeholder="Contraseña" />
         </div>
     </div>
+
+    <div class="form-group">
+        <label for="userPhone" class="col-sm-2 control-label">Tel&eacute;fono</label>
+        <div class="col-sm-10">
+            <input type="text" ng-model="userPhone" class="form-control" id="userPhone" placeholder="Teléfono" />
+        </div>
+    </div>   
+
     <div class="form-group">
         <label for="administrador" class="col-sm-2 control-label">Administrador</label>
         <div class="col-sm-10">            
