Ajustes de estilos login web

--- a/VecinosUY.Web.Api/index.html
+++ b/VecinosUY.Web.Api/index.html
@@ -42,10 +42,10 @@
             </div>
 
             <div class="container">
-                <label><b>Usuario</b></label>
+                <label class="loginLabel"><b>Usuario</b></label>
                 <input id="id" type="text" placeholder="Ingrese usuario de VecinosUY" name="uname" required>
                 <br/>
-                <label><b>Contrase&ntilde;a</b></label>
+                <label class="loginLabel"><b>Contrase&ntilde;a</b></label>
                 <input id="pass" type="password" placeholder="Ingrese contraseña" name="psw" required>
                 <br />
                 <input id="login" type="submit" value="Iniciar Sesión">                
