front end web de reservas y servicios

--- a/VecinosUY.Web.Api/index.html
+++ b/VecinosUY.Web.Api/index.html
@@ -26,6 +26,8 @@
                 <li><a href="#allUsers" onclick="viewDiv('divUsuarios')">Usuarios</a></li>
                 <li><a href="#allAnnouncements" onclick="viewDiv('divAnuncios')">Anuncios</a></li>
 				<li><a href="#allAccountStates" onclick="viewDiv('divAccountStates')">Estados de cuenta</a></li>
+				<li><a href="#allServices" onclick="viewDiv('divServices')">Servicios</a></li>
+				<li><a href="#allBookings" onclick="viewDiv('divBookings')">Reservas</a></li>
 
                 <li><a><span><img class="imgLogin" src="./imgs/login.png"><label id="usuarioLog" class="labelUsu"></label></span></a>
                     <ul>
